--- a/etc/project/versions.cfg
+++ b/etc/project/versions.cfg
@@ -2,6 +2,13 @@
 [buildout]
 versions=versions
 [versions]
+plone.tiles = 1.5.2
+plone.app.tiles = 2.2.1
+plone.app.standardtiles = 1.0
+plone.app.blocks = 3.1.0
+plone.app.drafts = 1.0
+plone.app.widgets = 2.0.5
+
 # never ever pin paste and other base eggs
 Paste =
 PasteDeploy =
